Add protected interface for Context and System. (#1)
* make fields of data mode package local

* wrap Context with interface and accessor functions, make fields private

* allow changes in Context to be send to forwarder an converted into OpenAPI JSON

* separate out Annotations as its own interface.  Changes to annotations will send event to resource to which the annotations belong.
